--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
                 <p style="font-size: 1.3rem; color: #ff4d6d;">
                     I knew you'd say yes! <br> 
                     You just made me the luckiest person. <br>
-                    Can't wait for our Valentine's! 😘
+                    Can't wait for our first Valentine's! 😘
                 </p>
             `;
             spawnHearts(100);
@@ -166,3 +166,4 @@
     </script>
 </body>
 </html>
+
